--- a/Loan.WebMVC/Views/Shared/_Layout.cshtml
+++ b/Loan.WebMVC/Views/Shared/_Layout.cshtml
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>@ViewData["Title"] - Loan.WebMVC</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
+
+    <link rel="stylesheet" href="https://unpkg.com/bs-brain@2.0.4/components/registrations/registration-3/assets/css/registration-3.css">
+
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/Loan.WebMVC.styles.css" asp-append-version="true"/>
 </head>
@@ -31,6 +34,24 @@
     </nav>
 </header>
 <div class="container">
+    @if (User.IsInRole("Admin"))
+    {
+    <p>You are an admin!</p>
+    }
+
+    @{
+    var roles = User.Claims
+    .Where(c => c.Type == System.Security.Claims.ClaimTypes.Role)
+    .Select(c => c.Value)
+    .ToList();
+    }
+
+    <ul>
+        @foreach (var role in roles)
+        {
+        <li>User has role: @role</li>
+        }
+    </ul>
     <main role="main" class="pb-3">
         @RenderBody()
     </main>
