--- a/Loan.WebMVC/Views/Merchant/Apply.cshtml
+++ b/Loan.WebMVC/Views/Merchant/Apply.cshtml
@@ -28,9 +28,9 @@
                         </div>
 
                         <div class="form-group">
-                            <label asp-for="Merchant.BusinessLicense"></label>
-                            <input asp-for="Merchant.BusinessLicense" type="file" class="form-control-file"/>
-                            <span asp-validation-for="Merchant.BusinessLicense" class="text-danger"></span>
+                            <label asp-for="BusinessLicenceFile"></label>
+                            <input asp-for="BusinessLicenceFile" type="file" class="form-control-file"/>
+                            <span asp-validation-for="BusinessLicenceFile" class="text-danger"></span>
                         </div>
                         <div class="form-group">
                             <label asp-for="Merchant.RegistrationNotes"></label>
