--- a/Loan.WebMVC/Views/Shared/Partials/_Navbar.cshtml
+++ b/Loan.WebMVC/Views/Shared/Partials/_Navbar.cshtml
@@ -6,12 +6,7 @@
                 <i class="fa fa-angle-down text-dark"></i>
             </a>
             <nav class="collapse show navbar navbar-vertical navbar-light align-items-start p-0 border border-top-0 border-bottom-0" id="navbar-vertical">
-                <div class="navbar-nav w-100 overflow-hidden" style="height: 410px">
-                    <!-- Category items can be dynamic via View Component -->
-                    <a href="#" class="nav-item nav-link">Shirts</a>
-                    <a href="#" class="nav-item nav-link">Jeans</a>
-                    <!-- Add more static links or use a View Component for dynamic categories -->
-                </div>
+                @await Component.InvokeAsync("Categories")
             </nav>
         </div>
         <div class="col-lg-9">
@@ -25,19 +20,6 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-                    <div class="navbar-nav mr-auto py-0">
-                        <a href="~/Index" class="nav-item nav-link active">Home</a>
-                        <a href="~/Shop" class="nav-item nav-link">Shop</a>
-                        <a href="~/Detail" class="nav-item nav-link">Shop Detail</a>
-                        <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
-                            <div class="dropdown-menu rounded-0 m-0">
-                                <a href="~/Cart" class="dropdown-item">Shopping Cart</a>
-                                <a href="~/Checkout" class="dropdown-item">Checkout</a>
-                            </div>
-                        </div>
-                        <a href="@Url.Action("Contact", "Home")" class="nav-item nav-link">Contact</a>
-                    </div>
                     <div class="navbar-nav ml-auto py-0">
                         <a href="@Url.Action("Login", "Auth")" class="nav-item nav-link">Login</a>
                         <a href="@Url.Action("Register", "Auth")" class="nav-item nav-link">Register</a>
