--- a/Loan.WebMVC/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/Loan.WebMVC/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -21,6 +21,9 @@
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
           crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    @await RenderSectionAsync("Styles", required: false)
+    
 </head>
 <body>
 <div class="container-scroller">
