--- a/Loan.WebMVC/Views/Shared/Components/HeaderCarousel/Default.cshtml
+++ b/Loan.WebMVC/Views/Shared/Components/HeaderCarousel/Default.cshtml
@@ -5,7 +5,7 @@
         @foreach (var item in Model)
         {
             <div class="carousel-item @(item.IsActive ? "active" : "")" style="height: 410px;">
-                <img class="img-fluid" src="~/@item.ImagePath" alt="@item.Title">
+                <img class="img-fluid" src="@Url.Action("GetImage", "Media", new { id = item.BannerImageId })" alt="@item.Title">
                 <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                     <div class="p-3" style="max-width: 700px;">
                         <h4 class="text-light text-uppercase font-weight-medium mb-3">@item.Offer</h4>
